# task_worker_requester

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  bootstrap.py  controller.py  runtime_paths.py  single_instance.py
config/: __init__.py  app_config.yaml  config_loader.py  models.py  recipe_config.yaml
docs/: build_windows.md  mq_message_and_config_spec.md
models/: __init__.py  task_models.py
packaging/: IPDK_plus.iss  IPDK_plus.spec  TaskWorkerRequester.iss  TaskWorkerRequester.spec
packaging/prereqs/: README.md
scripts/: build_windows.ps1
services/: __init__.py  folder_scanner.py  result_parser.py
services/broker/: __init__.py  base.py  mock_broker.py  rabbitmq_client.py  result_queue.py  routing.py
services/workers/: __init__.py  polling_worker.py  publish_worker.py  queue_metrics_worker.py
state/: __init__.py  task_store.py
tests/: test_config_loader.py  test_controller.py  test_folder_scanner.py  test_folder_table_model.py  test_image_table_model.py  test_logging_setup.py  test_main_cli.py  test_main_window.py  test_mock_broker.py  test_polling_worker.py  test_queue_metrics_worker.py  test_result_parser.py  test_result_queue.py  test_routing.py  test_runtime_paths.py  test_single_instance.py  test_task_store.py
ui/: main_window.py  styles.qss
ui/models/: __init__.py  folder_table_model.py  image_table_model.py
ui/widgets/: __init__.py  mq_button_delegate.py  status_badge.py
utils/: logging_setup.py  qt_compat.py
