[project]
name = "task-worker-requester"
version = "0.1.0"
description = "PySide6 RabbitMQ image task requester and tracker"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "PySide6>=6.7.0",
  "pika>=1.3.2",
  "PyYAML>=6.0.1",
]

[dependency-groups]
build = [
  "pyinstaller>=6.13.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
